carrito de compras finalizado

--- a/public/css/plantilla/style.css
+++ b/public/css/plantilla/style.css
@@ -345,8 +345,8 @@ section{
     background: url(../image/banner-bg.webp) no-repeat;
     background-position: center;
     background-size: cover;
-    padding-top: 17rem;
-    padding-bottom: 10rem;
+    padding-top: 9rem; 
+    /* padding-bottom: 10rem; */
 }
 
 .home .content{
@@ -735,7 +735,7 @@ section{
 }
 
 /* categoria show aca se ,muestra el detalle de las categorias  */
-.card-2,.card-3{
+.card-2,.card-3,.card-4{
     /* margin-top: 100px; */
     width: 90%;
     margin: auto;
@@ -744,11 +744,15 @@ section{
 
 
 
-.card-2 {
+.card-2.card-4 {
     /* box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);  */
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
     margin-top: 100px;
+}
+
+.card-4{
+    display: none;
 }
   
   /* Add rounded corners to the top left and the top right corner of the image */
@@ -897,6 +901,7 @@ ul.pagination li a {
 
     .header{
         padding:2rem;
+        
     }
 
     section{
@@ -1147,3 +1152,166 @@ p{
 }
 
 
+
+
+
+/* detalle carrito de compras */
+.contenedor {
+    background: #f7f5f5;
+	width: 90%;
+	max-width: 1200px;
+	margin: auto;
+	padding: 5px 0;
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.card-detalle-carrito {
+	border-radius: 10px;
+	min-height: 200px;
+	font-weight: bold;
+	padding: 20px;
+	position: relative;
+	overflow: hidden;
+	background-size: cover;
+	background-position: center center;  
+	
+}
+
+
+.card-detalle-carrito .textos,h1 {
+	height: 100%;
+	font-size: 20px;
+    color: #000000;	
+}
+
+.card-detalle-carrito .textos,.p-nombre {	
+	color: #000000;	
+}
+
+.card-detalle-carrito .textos,p {
+	color: #555;
+	font-size: 20px;	
+}
+
+
+
+.styled-table {
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: sans-serif;
+    min-width: 400px;
+    /* box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); */
+    width: 100%;
+}
+
+.styled-table thead tr {
+    /* background-color: #009879; */
+    /* color: #ffffff; */
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    /* border-bottom: 1px solid #dddddd; */
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    /* border-bottom: 2px solid #009879; */
+}
+
+.styled-table tbody tr.active-row {
+    font-weight: bold;
+    /* color: #009879; */
+}
+
+.box {
+    display: flex;
+    margin-right: 10px;
+  }
+
+.img-cart{
+    margin-right: 10px;
+
+}
+
+.borrar{
+    margin-left: 6px;    
+    cursor: pointer;    
+}
+.borrar:hover{
+    color: red
+    ;
+}
+
+.cantidad-detalle-carrito{
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+
+.btn-borrar-carrito{
+    margin-top: 1rem;
+    display: inline-block;
+    padding:.8rem 4rem;
+    font-size: 1.7rem;
+    border-radius: .5rem;
+    border:.2rem solid var(--black);
+    color:var(--black);
+    cursor: pointer;
+    background: none;
+}
+
+.btn-borrar-carrito:hover, .btn-carrito:hover{
+    background: rgb(204, 54, 54);
+    color:#fff;
+}
+
+.card-detalle-carrito-compras{
+    /* margin-top: 120px; */
+    margin-bottom: 40px;
+}
+
+.titulo-detalle-carrito{
+    color: #000000;
+}
+
+.detalle-carrito{
+    margin-top: 30px;
+}
+
+
+.texto-detalle-producto{
+    width: 50%;
+    padding: 5px;
+}
+
+.card-5{
+    width: 90%;
+    margin: auto;
+    display: block;
+}
+
+.flex-card{
+    display: flex;
+    
+      
+}
+
+.texto-detalle-producto-2{
+    /* margin: -9px; */
+    margin-left: auto;   
+    
+}
+.boton-continuar{
+    margin: auto;
+}
