--- a/public/css/plantilla/style.css
+++ b/public/css/plantilla/style.css
@@ -1668,4 +1668,29 @@ font-size: 28px;
 
 .flex-boton{
     margin-left: auto;
+    
 }
+
+.letras_usuario{
+    font-size: 20px;
+}
+
+.btn_cerrarsesion{
+    background: none;
+    cursor: pointer;
+    color: rgb(89, 89, 89);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
